<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/etRoutineName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/routine_name_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvTitleSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/steps_selected"

        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/etRoutineName"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAvailablePictos"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitleSelect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvTitleSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/added_steps"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/rvAvailablePictos"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSelectedSteps"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/tvTitleSelected"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>